# architecture-patterns

./: pyproject.toml
src/architecture_patterns/: model.py  repository.py
tests/: test_allocate.py  test_batches.py  test_orm.py  test_repository.py
