[project]
name = "architecture-patterns"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Leonardo Raggio", email = "leonardo.raggio@gmail.com" }]
dependencies = [
    "sqlalchemy>=2.0.30",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.2.1", "mypy>=1.10.0", "ruff>=0.4.7"]
