[project]
name = "architecture-patterns"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Leonardo Raggio", email = "leonardo.raggio@gmail.com" }]
dependencies = [
  "sqlalchemy>=2.0.31",
  "psycopg2-binary>=2.9.9",
  "requests>=2.32.3",
  "fastapi>=0.111.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "ruff>=0.4.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/architecture_patterns"]
